select the next article in the article list when deleting the only selected article (doesn't apply when deleting multiple articles)

BUG: 119724

svn path=/branches/KDE/3.5/kdepim/; revision=496329